# ratatui-hypertile

./: Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: core_only.rs
extras/: Cargo.toml
extras/examples/: basic.rs
extras/src/: lib.rs  registry.rs
extras/src/registry/: types.rs
extras/src/runtime/: animation.rs  builder.rs  checker.rs  crossterm.rs  default_plugin.rs  keyevent.rs  keymap.rs  mod.rs  palette.rs  pty.rs  render.rs  tab_bar.rs  termwiz.rs  workspace.rs
src/: engine.rs  input.rs  lib.rs
src/core/: helpers.rs  mod.rs  types.rs
src/core/state/: focus.rs  mod.rs  movement.rs  mutation.rs
