[workspace]
members = ["extras"]
resolver = "2"

[package]
name = "ratatui-hypertile"
version = "0.3.0"
edition = "2024"
rust-version = "1.88"
description = "Tiling layout engine for Ratatui"
license = "MIT"
repository = "https://github.com/nikolic-milos/ratatui-hypertile"
documentation = "https://docs.rs/ratatui-hypertile"
readme = "README.md"
keywords = ["tiling", "layout", "ratatui", "tui", "panes"]
categories = ["command-line-interface"]

[dependencies]
ratatui = { version = "0.30", default-features = false, features = ["crossterm"] }
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
default = []
serde = ["dep:serde"]

[dev-dependencies]
crossterm = "0.29"

[patch."https://github.com/lhz07/wezterm_hyprtui.git"]
wezterm-term = { path = "../wezterm_hyprtui/term" }
wezterm-cell = { path = "../wezterm_hyprtui/wezterm-cell" }
wezterm-surface = { path = "../wezterm_hyprtui/wezterm-surface" }
termwiz = { path = "../wezterm_hyprtui/termwiz" }
