[workspace]
members = ["extras"]
resolver = "2"

[package]
name = "ratatui-hypertile"
version = "0.3.0"
edition = "2024"
rust-version = "1.88"
description = "Tiling layout engine for Ratatui"
license = "MIT"
repository = "https://github.com/nikolic-milos/ratatui-hypertile"
documentation = "https://docs.rs/ratatui-hypertile"
readme = "README.md"
keywords = ["tiling", "layout", "ratatui", "tui", "panes"]
categories = ["command-line-interface"]

[dependencies]
log.workspace = true
ratatui.workspace = true

[workspace.dependencies]
log = "0.4.29"
ratatui = { version = "0.30", default-features = false, features = ["crossterm"] }


[patch."https://github.com/lhz07/wezterm_hyprtui.git"]
wezterm-term = { path = "../wezterm_hyprtui/term" }
wezterm-input-types = { path = "../wezterm_hyprtui/wezterm-input-types" }
wezterm-cell = { path = "../wezterm_hyprtui/wezterm-cell" }
wezterm-surface = { path = "../wezterm_hyprtui/wezterm-surface" }
termwiz = { path = "../wezterm_hyprtui/termwiz" }
portable-pty = { path = "../wezterm_hyprtui/pty" }
