[package]
name = "ratatui-hypertile-extras"
version = "0.3.0"
edition = "2024"
rust-version = "1.88"
description = "Optional runtime helpers for ratatui-hypertile"
license = "MIT"
repository = "https://github.com/nikolic-milos/ratatui-hypertile"
documentation = "https://docs.rs/ratatui-hypertile-extras"
keywords = ["tiling", "ratatui", "tui", "plugins", "runtime"]
categories = ["command-line-interface"]

[dependencies]
ratatui-hypertile = { version = "0.3.0", path = "..", default-features = false }
ratatui = { version = "0.30", default-features = false }
crossterm = { version = "0.29", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
portable-pty = { git = "https://github.com/lhz07/wezterm_hyprtui.git", branch = "hyprtui" }
tokio = { version = "1.52.1", features = ["net", "fs", "rt", "rt-multi-thread", "sync", "macros", "io-util"] }
libc = "0.2.185"
anyhow = "1.0.102"
tui-logger = "0.18.2"
log = "0.4.29"
wezterm-term = { git = "https://github.com/lhz07/wezterm_hyprtui.git", branch = "hyprtui" }
wezterm-cell = { git = "https://github.com/lhz07/wezterm_hyprtui.git", branch = "hyprtui" }
wezterm-surface = { git = "https://github.com/lhz07/wezterm_hyprtui.git", branch = "hyprtui" }
termwiz = { git = "https://github.com/lhz07/wezterm_hyprtui.git", branch = "hyprtui" }
ratatui-image = "10.0.6"
image = "0.25.10"
base64-simd = "0.8.0"
icy_sixel = "0.5.0"


[features]
default = ["crossterm"]
crossterm = ["dep:crossterm"]
serde = ["dep:serde", "dep:serde_json", "ratatui-hypertile/serde"]

[[example]]
name = "basic"
required-features = ["crossterm"]
